# simple-ai

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  快速入门.md  打包companion.bat  打包electron.bat  打包exe.bat  打包exe教程.md
companion/: Cargo.toml  README.md
companion/src/: main.rs
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEV_SETUP.md  FEATURE_STATUS.md  ROADMAP.md  TOOLS.md  TOOLS_COMPARISON.md
docs/screenshots/: html-anything-export-example.html
electron/: main.cjs  preload.cjs
scripts/: bundle-claude.mjs  gen-icons.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  lsp.rs  main.rs  mcp.rs
src/components/: AskUserQuestionModal.tsx  AutoUpdateCard.tsx  Card.tsx  ChatView.tsx  CollapsibleSection.tsx  CompanionPermissionModal.tsx  CompanionStatus.tsx  Icons.tsx  Layout.tsx  Markdown.tsx  MarketplaceManager.tsx  MessageRender.tsx  MiniTokenPanel.tsx  ModelEndpointEditor.tsx  PlanBanner.tsx  TerminalHistoryDrawer.tsx  TerminalPanel.tsx  ThinkingIndicator.tsx  TodoPanel.tsx  ToolCallBlock.tsx
src/lib/: agentCapabilities.ts  agentHistory.ts  agentLoop.ts  agents.ts  ai.ts  cliDetector.ts  companion.ts  electron.ts  favorites.ts  features.ts  htmlSkills.ts  imageIntent.ts  localBackend.ts  marketplace.ts  minitoken.ts  modelHelpers.ts  multimodal.ts  profiles.ts  prompts.ts  retry.ts  (+7 more)
(+54 files in other folders)
