[package]
name = "simple-ai-companion"
version = "1.0.0"
edition = "2021"
authors = ["you"]
description = "Local bridge for simple-ai web — exposes file / bash operations on localhost with workspace sandboxing."

[[bin]]
name = "simple-ai-companion"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "fs", "io-util"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
glob = "0.3"
regex = "1"
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
